<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/tab_calendar" />

    <item
        android:id="@+id/navigation_leaves"
        android:icon="@drawable/ic_leaves"
        android:title="@string/tab_leaves" />

    <item
        android:id="@+id/navigation_astrology"
        android:icon="@drawable/ic_astrology"
        android:title="@string/tab_astrology" />
</menu>
