<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_toggle_theme"
        android:title="Toggle Theme"
        android:icon="@drawable/ic_theme"
        android:showAsAction="always" />
</menu>
